# livebox-cli

./: .gitignore  Cargo.toml  README.md  devenv.nix  shell.nix
.github/: renovate.json5
.github/workflows/: build_and_test.yml  release.yml
src/: livebox.rs  main.rs
