[package]
name = "livebox-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.3", features = ["derive", "cargo", "env"] }
env_logger = "^0.11.0"
log = "^0.4"
reqwest = { version = "^0.12.0", features = ["json", "cookies"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_json_path = "^0.7.0"
tokio = { version = "^1.29", features = ["rt", "macros"] }