[package]
name = "livebox-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive", "cargo", "env"] }
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_path = "0.7.2"
tokio = { version = "1.49.0", features = ["rt", "macros"] }

[dev-dependencies]
mockito = "1.7.2"