[package]
name = "livebox-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.13", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.7"
tokio = { version = "1.49", features = ["rt", "macros"] }

[dev-dependencies]
mockito = "=1.7.2"